Cache, scrollbar design, scroll fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,24 @@
   font-family: Apple-system;
   src: url("/fonts/apple-system.ttf");
 }
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px; 
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #2a2e32;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #4b5563; 
+  border-radius: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #586675; 
+}
+
+
 
 @theme {
   --color-fprimary: #1d2125;
